--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 
 					<ul style ="list-style: none; text-align:center; display:inline-block; margin: 0 auto;">
 						<li><h3>Simple Calculator</h3></li>
-						<li><img src="images/Simple Calculator.png" alt="game" width="300" height="200"></li>
+						<li><img src="Simple Calculator.png" alt="game" width="300" height="200"></li>
 						<li>
 						<a href="MySimpleCalc.html" target="_blank" style="background:#2A9D8F; color:#F7FFF7; text-decoration:none; padding:8px; border-radius:4px; display:inline-block;">Play Game</a>
 						</li>
 					</ul>
 					<ul style ="list-style: none; text-align:center; display:inline-block; margin:0 auto;">
 						<li><h3>Basketball Game</h3></li>
-						<li><img src="images/Basketball Game.png" alt="game" width="300" height="200"></li>
+						<li><img src="Basketball Game.png" alt="game" width="300" height="200"></li>
 						<li>
 						<a href="Basketball Game.html" target="_blank" style="background:#2A9D8F; color:#F7FFF7;  text-decoration:none; padding:8px; border-radius:4px; display:inline-block;">Play Game</a>
 						</li>
@@ -68,7 +68,7 @@
 		<section style="text-align:center;">
 					<ul style ="list-style: none; text-align:center; display:inline-block; margin:0 auto; padding:0px;">
 						<li><h3>Car Racing Game</h3></li>
-						<li><img src="images/Car Racing Game.png" alt="game" width="300" height="200"></li>
+						<li><img src="Car Racing Game.png" alt="game" width="300" height="200"></li>
 						<li>
 						<a href="Car Racing Game.html" target="_blank" style="background:#2A9D8F; color:#F7FFF7; text-decoration:none; padding:8px; border-radius:4px; display:inline-block;">Play Game</a>
 						</li>
@@ -76,7 +76,7 @@
 					
 						<ul style ="list-style: none; text-align:center; display:inline-block; margin: 0 auto;">
 						<li><h3>Maze</h3></li>
-						<li><img src="images/Maze.png" alt="game" width="300" height="200"></li>
+						<li><img src="Maze.png" alt="game" width="300" height="200"></li>
 						<li>
 						<a href="Maze.html" target="_blank" style="background:#2A9D8F; color:#F7FFF7; text-decoration:none; padding:8px; border-radius:4px; display:inline-block;">Play Game</a>
 						</li>
