--- a/Hobby.html
+++ b/Hobby.html
@@ -22,7 +22,7 @@
 
 <!--******************************************* Header ********************************-->
 
-<header style= "font-size:15px; margin:0; padding:2px; background: hsla(229, 57%, 63%, 1);
+<header style= "font-size:15px; margin:0; padding:20px 0px 20px 20px; background: hsla(229, 57%, 63%, 1);
 
 background: linear-gradient(90deg, hsla(229, 57%, 63%, 1) 13%, hsla(189, 76%, 85%, 1) 47%, hsla(104, 84%, 90%, 1) 83%);
 
@@ -46,19 +46,33 @@ filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#6b7fd7", en
 
 <main>
 
-<section style= "background: #FF2800; margin:0 auto; padding:2px"> 
+<section style= "margin:0 auto; padding:20px; background: hsla(260, 75%, 95%, 1);
+
+background: linear-gradient(90deg, hsla(260, 75%, 95%, 1) 0%, hsla(195, 85%, 66%, 1) 50%, hsla(319, 90%, 59%, 1) 100%);
+
+background: -moz-linear-gradient(90deg, hsla(260, 75%, 95%, 1) 0%, hsla(195, 85%, 66%, 1) 50%, hsla(319, 90%, 59%, 1) 100%);
+
+background: -webkit-linear-gradient(90deg, hsla(260, 75%, 95%, 1) 0%, hsla(195, 85%, 66%, 1) 50%, hsla(319, 90%, 59%, 1) 100%);
+
+filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#f0eafc", endColorstr="#61cef2", GradientType=1 );"> 
 
 <h3> Reading </h3>
 
 <p style= "font-size:14px;"> Sanay has many hobbies, but his favorite hobby is most definitely reading. He spends almost all his time reading and is often found with a book. </p>
 
+<img src="images/Reading Hobby.jpeg" width=400 height=200>
+
 <h3> Coding </h3>
 
 <p style= "font-size:14px;"> One of Sanay's hobbies is coding, he can use scratch and java to create websites and games, and you can see these games above.  </p>
 
+<img src="images/Coding Hobby.jpeg" width=400 height=200>
+
 <h3> Finance </h3>
 
 <p style= "font-size:14px;"> Sanay also enjoys reading about finance, and discussing these kind of things as he finds them very interesting. </p>
+
+<img src="images/Finance Hobby.jpg" width=400 height=200>
 
 </section>
 
@@ -66,9 +80,26 @@ filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#6b7fd7", en
 
 <!--******************************************* Footer ********************************-->
 
-<footer>
+	<footer style="margin:0; padding:15px; text-align:center; background: hsla(192, 96%, 50%, 1);
 
-</footer>
+background: linear-gradient(90deg, hsla(192, 96%, 50%, 1) 0%, hsla(65, 92%, 54%, 1) 100%);
+
+background: -moz-linear-gradient(90deg, hsla(192, 96%, 50%, 1) 0%, hsla(65, 92%, 54%, 1) 100%);
+
+background: -webkit-linear-gradient(90deg, hsla(192, 96%, 50%, 1) 0%, hsla(65, 92%, 54%, 1) 100%);
+
+filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#05c9f9", endColorstr="#e5f61b", GradientType=1 );">
+
+<h2 style= "margin:0; padding:5px;">Let's Keep in Touch!</h2>
+
+        <!-- Social media and contact links. -->
+        		<ul style= "margin:0; padding:0px;">
+          			<li ><a href="mailto:sanayram20@gmail.com">sanayram20@gmail.com</a></li>
+                 		<li ><a href="#" target="_blank">Instagram</a></li>
+          			
+          			<li><a href="#" target="_blank">Facebook</a></li>
+        		</ul>
+	</footer>
 
 </body>
 </html>
