--- a/Hobby.html
+++ b/Hobby.html
@@ -60,19 +60,19 @@ filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#f0eafc", en
 
 <p style= "font-size:14px;"> Sanay has many hobbies, but his favorite hobby is most definitely reading. He spends almost all his time reading and is often found with a book. </p>
 
-<img src="images/Reading Hobby.jpeg" width=400 height=200>
+<img src="Reading Hobby.jpeg" width=400 height=200>
 
 <h3> Coding </h3>
 
 <p style= "font-size:14px;"> One of Sanay's hobbies is coding, he can use scratch and java to create websites and games, and you can see these games above.  </p>
 
-<img src="images/Coding Hobby.jpeg" width=400 height=200>
+<img src="Coding Hobby.jpeg" width=400 height=200>
 
 <h3> Finance </h3>
 
 <p style= "font-size:14px;"> Sanay also enjoys reading about finance, and discussing these kind of things as he finds them very interesting. </p>
 
-<img src="images/Finance Hobby.jpg" width=400 height=200>
+<img src="Finance Hobby.jpg" width=400 height=200>
 
 </section>
 
